--- a/src/sass/dristhi.scss
+++ b/src/sass/dristhi.scss
@@ -1,110 +1,16 @@
-$groupline: #bbbbbb;
-$line: 3px solid $groupline;
-$input-height: 34px;
-$input-min-width: 0.2 * 720px;
-$input-max-width: 80%;
-$baseFontSize: 22px;
-$baseLineHeight: 22px;
-$accent-color-1: #CE4F07;
-$images-path: '../images/';
-$icon-font-path: '../font/';
-
-@mixin font-normal {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: normal;
-  font-style: normal; }
-
-@mixin font-bold {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;;
-  font-weight: bold;
-  font-style: normal; }
-
-//Bootstrap-sass from: https://github.com/thomas-mcdonald/bootstrap-sass
-
-// Core variables and mixins
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/variables";
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/mixins";
-
-// Reset
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/normalize";
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/print";
-
-// Core CSS
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/scaffolding";
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/type";
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/code";
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/grid";
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/tables";
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/forms";
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/buttons";
-
-// Components
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/component-animations";
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/glyphicons";
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/dropdowns";
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/button-groups";
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/input-groups";
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/navs";
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/navbar";
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/breadcrumbs";
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/pagination";
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/pager";
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/labels";
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/badges";
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/jumbotron";
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/thumbnails";
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/alerts";
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/progress-bars";
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/media";
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/list-group";
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/panels";
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/wells";
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/close";
-
-// Components w/ JavaScript
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/modals";
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/tooltip";
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/popovers";
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/carousel";
-
-// Utility classes
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/utilities";
-@import "../../lib/enketo-core/lib/bootstrap-sass/bootstrap/responsive-utilities";
-
+// variables and mixins
+@import "../../lib/enketo-core/src/sass/core/variables";
+@import "../../lib/enketo-core/src/sass/formhub/variables";
+@import "dristhi/variables";
 @import "../../lib/enketo-core/src/sass/core/mixins";
+@import "../../lib/enketo-core/src/sass/formhub/mixins";
+@import "dristhi/mixins";
+
+// styles
+@import "../../lib/enketo-core/src/sass/bootstrap";
 @import "../../lib/enketo-core/src/sass/core/layout";
 @import "../../lib/enketo-core/src/sass/core/main";
 @import "widgets";
 @import "../../lib/enketo-core/src/sass/core/responsive";
-@import '../../lib/enketo-core/src/sass/formhub/theme';
-
-/* overriding main rules */
-body, h2,h3,h4,legend{
-    //font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #0d0d0d;}
-h3 {
-  font-weight: bolder;
-  font-size: 30px; }
-.btn-info{
-    //slightly tweak bootstrap default
-    @include button-variant($btn-info-color, #5bc0de, $btn-info-border);
-    //@include btn-info-extension-flat;
-}
-
-.paper{
-    border: none; }
-
-/* overriding _form rules */
-.paper {
-    .form-language-selector {
-        border-right: none;}
-    .form-header {
-        display: none;} }
-.btn-radiocheck{
-    &:hover, &:focus, &:active, &[data-checked]{
-        background-color: #e4f4ff; } }
-.input-append .add-on{
-    padding: 13px 5px 7px 5px;
-}
-#submit-form progress{
-    margin: 0 auto -6px auto;}
+@import "../../lib/enketo-core/src/sass/formhub/theme";
+@import "dristhi/theme";
