--- a/src/sass/dristhi/_mixins.scss
+++ b/src/sass/dristhi/_mixins.scss
@@ -1,9 +1,17 @@
+// The Kannada Sangam MN font is added to allow mobile testing in the browser of forms containing Kannada Script
+// It probably is not used in the Android App.
+
+@font-face {
+	font-family: 'Kannada Sangam MN';
+	src: url('../font/Kannada Sangam MN.ttc');
+}
+
 @mixin font-normal {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue", "Kannada Sangam MN", Helvetica, Arial, sans-serif;
   font-weight: normal;
   font-style: normal; }
 
 @mixin font-bold {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;;
+  font-family: "Helvetica Neue", "Kannada Sangam MN", Helvetica, Arial, sans-serif;;
   font-weight: bold;
   font-style: normal; }
