--- a/src/sass/dristhi/theme.scss
+++ b/src/sass/dristhi/theme.scss
@@ -12,7 +12,6 @@ h3 {
 .btn-info {
     //slightly tweak bootstrap default
     @include button-variant($btn-info-color, #5bc0de, $btn-info-border);
-    //@include btn-info-extension-flat;
 }
 
 #submit-form {
@@ -20,7 +19,7 @@ h3 {
     margin-left: auto;
     margin-right: auto;
     left: auto;
-    @include button-variant($btn-info-color, rgb(65, 151, 32), rgb(36, 122, 10))
+    @include button-variant($btn-info-color, rgb(65, 151, 32), rgb(36, 122, 10));
 }
 
 .paper {
@@ -37,18 +36,15 @@ h3 {
     }
 }
 
-.btn-radiocheck {
-    background-color: transparent;
-    border: 1px solid #ccc;
-    box-shadow: none;
-    @include border-radius(4px);
-    &:hover, &:focus, &:active, &[data-checked] {
-        background-color: #e4f4ff;
+.touch {
+    .question:not(.or-appearance-compact):not(.or-appearance-quickcompact):not(.or-appearance-label):not(.or-appearance-list-nolabel) {
+        // touch radio buttons and checkboxes
+        legend ~ label {
+            &:focus, &:hover, &:active, &[data-checked] {
+                background-color: #e4f4ff;
+            }
+        }
     }
-}
-
-.input-append .add-on {
-    padding: 13px 5px 7px 5px;
 }
 
 #submit-form progress {
