enabled likert widget and rebuilt

--- a/src/sass/_widgets.scss
+++ b/src/sass/_widgets.scss
@@ -11,3 +11,4 @@
 @import "../../lib/enketo-core/src/widget/datetime/datetimepicker-extended.scss";
 @import "../../lib/enketo-core/src/widget/mediagrid/mediagridpicker.scss";
 @import "../../lib/enketo-core/src/widget/medialabel/medialabelwidget.scss";
+@import "../../lib/enketo-core/src/widget/select-likert/likertitem.scss";
