Kanada font fix (for dev only)

--- a/src/sass/dristhi/_mixins.scss
+++ b/src/sass/dristhi/_mixins.scss
@@ -3,7 +3,7 @@
 
 @font-face {
 	font-family: 'Kannada Sangam MN';
-	src: url('../font/Kannada Sangam MN.ttc');
+	src: url('/font/Kannada Sangam MN.ttc');
 }
 
 @mixin font-normal {
