fix for font-size (yeah I should have noticed that …. ), closes #25

--- a/src/sass/dristhi/_variables.scss
+++ b/src/sass/dristhi/_variables.scss
@@ -1,5 +1,5 @@
-$baseFontSize: 22px;
-$baseLineHeight: 22px;
+$font-size-base: 22px;
+$line-height-base: 1;
 
 $accent-color-1: #CE4F07;
 $repeat-bg: lighten($accent-color-1, 55%);
