--- a/src/sass/dristhi/theme.scss
+++ b/src/sass/dristhi/theme.scss
@@ -19,6 +19,7 @@ h3 {
     margin-left: auto;
     margin-right: auto;
     left: auto;
+    height: 45px;
     @include button-variant($btn-info-color, rgb(65, 151, 32), rgb(36, 122, 10));
 }
 
