--- a/src/sass/dristhi/_mixins.scss
+++ b/src/sass/dristhi/_mixins.scss
@@ -1,5 +1,5 @@
 // The Kannada Sangam MN font is added to allow mobile testing in the browser of forms containing Kannada Script
-// It probably is not used in the Android App.
+// It probably is not used in the Android App if it has the Helvetica Neue font.
 
 @font-face {
     font-family: 'Kannada Sangam MN';
