make all non-radio/check inputs the same large width, closes #25

--- a/src/sass/dristhi/_variables.scss
+++ b/src/sass/dristhi/_variables.scss
@@ -5,7 +5,7 @@ $accent-color-1: #CE4F07;
 $repeat-bg: lighten($accent-color-1, 55%);
 
 $input-height: 36px;
-$input-min-width: 0.3 * 720px;
+$input-min-width: 80%; 
 
 $images-path: '../images/';
 $icon-font-path: '../font/';
