buttons back to dristhi-blue, closes #34

--- a/src/sass/dristhi/_variables.scss
+++ b/src/sass/dristhi/_variables.scss
@@ -2,6 +2,7 @@ $font-size-base: 22px;
 $line-height-base: 1;
 
 $accent-color-1: #CE4F07;
+$accent-color-2: #e4f4ff;
 $repeat-bg: lighten($accent-color-1, 55%);
 
 $input-height: 36px;
