upgraded enketo-core with: fast repeats, new radiobuttons/checkboxes, bug fixes, jr:choice-name() support + updated mock transformations

--- a/src/sass/dristhi.scss
+++ b/src/sass/dristhi.scss
@@ -1,7 +1,9 @@
-// variables and mixins
+// variables
 @import "../../lib/enketo-core/src/sass/core/variables";
 @import "../../lib/enketo-core/src/sass/formhub/variables";
 @import "dristhi/variables";
+
+// mixins 
 @import "../../lib/enketo-core/src/sass/core/mixins";
 @import "../../lib/enketo-core/src/sass/formhub/mixins";
 @import "dristhi/mixins";
