--- a/src/sass/dristhi/_mixins.scss
+++ b/src/sass/dristhi/_mixins.scss
@@ -3,7 +3,16 @@
 
 @font-face {
     font-family: 'Kannada Sangam MN';
-    src: url("/font/Kannada Sangam MN.ttc");
+    src: url("#{$icon-font-path}Kannada Sangam MN.ttc");
+}
+
+@font-face {
+    font-family: 'enketo-icons';
+    src: url('#{$icon-font-path}enketo-icons-v2.woff') format('woff'), 
+        url('#{$icon-font-path}enketo-icons-v2.ttf') format('truetype'), 
+        url('#{$icon-font-path}enketo-icons-v2.svg#enketo-icons') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
 @mixin font-normal {
